--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body{
   font-family: 'Merriweather', serif;
 }
 span{
-  color: rgb(195, 165, 224);
+  color: #66bfbf;
 }
 .bottomcloud {
   position:absolute;
